[project]
name = "unified-pipeline-refresher"
requires-python = ">= 3.10"
readme = "README.md"


[tool.isort]
py_version=310
extend_skip = ['__pycache__', '.mypy_cache', '.ve', '.venv']
skip_gitignore = true
src_paths = ['src']
line_length = 119


[tool.flake8]
max-line-length = 119
extend_ignore = ['E203', 'W503', 'E275']
exclude = ['__pycache__', '.mypy_cache', '.ve', '.venv']
max_complexity = 7


[tool.black]
line-length = 119
include='''src/.*/*.py$'''


[tool.mypy]
files=["src/"]
mypy_path=["src/"]
ignore_missing_imports = true
